--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,63 @@ header h1, footer h1 {
         height: auto;
     }
 }
+
+/* aca se agrego el nav estilos con boton agregar */
+.nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    flex: 1;
+}
+
+.nav-input {
+    padding: 10px;
+    font-size: 16px;
+    flex: 1;
+    border: 1px solid #ccc;
+    border-radius: 4px 0 0 4px;
+}
+
+.search-icon {
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-left: 0;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
+
+.nav-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.nav-button img {
+    width: 30px;
+    height: 30px;
+}
+
+@media (max-width: 768px) {
+    .nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search-container {
+        width: 80%;
+        margin: 10px 0;
+    }
+
+    .nav-button {
+        margin: 10px 0;
+    }
+}
